tests/snapshots/07_scrabble_all_options_02_DataSourceExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-----------+-------------+
| n_nationkey | n_name    | n_regionkey |
|=============+===========+=============|
| 0           | ALGERIA   | 0           |
|-------------+-----------+-------------|
| 1           | ARGENTINA | 1           |
|-------------+-----------+-------------|
| 2           | BRAZIL    | 1           |
|-------------+-----------+-------------|
| 3           | CANADA    | 1           |
|-------------+-----------+-------------|
| 4           | EGYPT     | 4           |
+-------------+-----------+-------------+
