tests/snapshots/07_scrabble_all_options_03_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-----------+-------------+
| n_nationkey | n_name    | n_regionkey |
|=============+===========+=============|
| 1           | ARGENTINA | 1           |
|-------------+-----------+-------------|
| 2           | BRAZIL    | 1           |
|-------------+-----------+-------------|
| 3           | CANADA    | 1           |
|-------------+-----------+-------------|
| 6           | FRANCE    | 3           |
|-------------+-----------+-------------|
| 7           | GERMANY   | 3           |
+-------------+-----------+-------------+
