tests/snapshots/07_scrabble_all_options_04_HashJoinExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+------------+------------+------------+-----------+-----------+
| r_regionke | r_name     | n_nationke | n_name    | n_regionk |
| y          |            | y          |           | ey        |
|============+============+============+===========+===========|
| 0          | AFRICA     | 0          | ALGERIA   | 0         |
|------------+------------+------------+-----------+-----------|
| 1          | AMERICA    | 1          | ARGENTINA | 1         |
|------------+------------+------------+-----------+-----------|
| 1          | AMERICA    | 2          | BRAZIL    | 1         |
|------------+------------+------------+-----------+-----------|
| 1          | AMERICA    | 3          | CANADA    | 1         |
|------------+------------+------------+-----------+-----------|
| 4          | MIDDLE     | 4          | EGYPT     | 4         |
|            | EAST       |            |           |           |
+------------+------------+------------+-----------+-----------+
