tests/snapshots/07_scrabble_all_options_05_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+
| r_regionkey | r_name      |
|=============+=============|
| 1           | AMERICA     |
|-------------+-------------|
| 3           | EUROPE      |
|-------------+-------------|
| 2           | ASIA        |
|-------------+-------------|
| 4           | MIDDLE EAST |
|-------------+-------------|
| 0           | AFRICA      |
+-------------+-------------+
