tests/snapshots/07_scrabble_all_options_06_CoalesceBatchesExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+--------+-------------+-------------+-------------+
| points | n_nationkey | nation_name | region_name |
|========+=============+=============+=============|
| 1      | 1           | ARGENTINA   | AMERICA     |
|--------+-------------+-------------+-------------|
| 1      | 1           | ARGENTINA   | AMERICA     |
|--------+-------------+-------------+-------------|
| 2      | 1           | ARGENTINA   | AMERICA     |
|--------+-------------+-------------+-------------|
| 1      | 1           | ARGENTINA   | AMERICA     |
|--------+-------------+-------------+-------------|
| 1      | 1           | ARGENTINA   | AMERICA     |
+--------+-------------+-------------+-------------+
