tests/snapshots/07_scrabble_all_options_07_CoalesceBatchesExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------------------+
| n_nationkey | nation_name | region_name | sum(s.points)[sum] |
|=============+=============+=============+====================|
| 6           | FRANCE      | EUROPE      | 11                 |
|-------------+-------------+-------------+--------------------|
| 19          | ROMANIA     | EUROPE      | 9                  |
|-------------+-------------+-------------+--------------------|
| 5           | ETHIOPIA    | AFRICA      | 13                 |
|-------------+-------------+-------------+--------------------|
| 9           | INDONESIA   | ASIA        | 10                 |
|-------------+-------------+-------------+--------------------|
| 12          | JAPAN       | ASIA        | 14                 |
+-------------+-------------+-------------+--------------------+
