tests/snapshots/07_scrabble_all_options_07_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+------------+-----------+------------+------------+-----------+
| n_nationke | n_name    | n_regionke | r_regionke | r_name    |
| y          |           | y          | y          |           |
|============+===========+============+============+===========|
| 0          | ALGERIA   | 0          | 0          | AFRICA    |
|------------+-----------+------------+------------+-----------|
| 1          | ARGENTINA | 1          | 1          | AMERICA   |
|------------+-----------+------------+------------+-----------|
| 2          | BRAZIL    | 1          | 1          | AMERICA   |
|------------+-----------+------------+------------+-----------|
| 3          | CANADA    | 1          | 1          | AMERICA   |
|------------+-----------+------------+------------+-----------|
| 4          | EGYPT     | 4          | 4          | MIDDLE    |
|            |           |            |            | EAST      |
+------------+-----------+------------+------------+-----------+
