tests/snapshots/07_scrabble_all_options_07_UnnestExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------------------+
| n_nationkey | nation_name | region_name | __unnest_placehold |
|             |             |             | er(n.letters,depth |
|             |             |             | =1)                |
|=============+=============+=============+====================|
| 0           | ALGERIA     | AFRICA      | A                  |
|-------------+-------------+-------------+--------------------|
| 0           | ALGERIA     | AFRICA      | L                  |
|-------------+-------------+-------------+--------------------|
| 0           | ALGERIA     | AFRICA      | G                  |
|-------------+-------------+-------------+--------------------|
| 0           | ALGERIA     | AFRICA      | E                  |
|-------------+-------------+-------------+--------------------|
| 0           | ALGERIA     | AFRICA      | R                  |
+-------------+-------------+-------------+--------------------+
