tests/snapshots/07_scrabble_all_options_08_CoalesceBatchesExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+---------------+----------------+
| region_name | nation_name   | scrabble_score |
|=============+===============+================|
| AMERICA     | ARGENTINA     | 10             |
|-------------+---------------+----------------|
| AMERICA     | UNITED STATES | 13             |
|-------------+---------------+----------------|
| AMERICA     | PERU          | 6              |
|-------------+---------------+----------------|
| AMERICA     | BRAZIL        | 17             |
|-------------+---------------+----------------|
| AMERICA     | CANADA        | 9              |
+-------------+---------------+----------------+
