tests/snapshots/07_scrabble_all_options_08_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------------------+
| n_nationkey | nation_name | region_name | __unnest_placehold |
|             |             |             | er(n.letters)      |
|=============+=============+=============+====================|
| 0           | ALGERIA     | AFRICA      | [A, L, G, E, R, I, |
|             |             |             | A]                 |
|-------------+-------------+-------------+--------------------|
| 1           | ARGENTINA   | AMERICA     | [A, R, G, E, N, T, |
|             |             |             | I, N, A]           |
|-------------+-------------+-------------+--------------------|
| 2           | BRAZIL      | AMERICA     | [B, R, A, Z, I, L] |
|-------------+-------------+-------------+--------------------|
| 3           | CANADA      | AMERICA     | [C, A, N, A, D, A] |
|-------------+-------------+-------------+--------------------|
| 4           | EGYPT       | MIDDLE EAST | [E, G, Y, P, T]    |
+-------------+-------------+-------------+--------------------+
