tests/snapshots/07_scrabble_all_options_09_CoalesceBatchesExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+---------------+---------+
| n_nationkey | n_name        | r_name  |
|=============+===============+=========|
| 1           | ARGENTINA     | AMERICA |
|-------------+---------------+---------|
| 2           | BRAZIL        | AMERICA |
|-------------+---------------+---------|
| 3           | CANADA        | AMERICA |
|-------------+---------------+---------|
| 17          | PERU          | AMERICA |
|-------------+---------------+---------|
| 24          | UNITED STATES | AMERICA |
+-------------+---------------+---------+
